# voice-control

./: Cargo.toml  README.md
benches/: bench.rs
examples/: log-keystrokes.rs
src/: desktop_control.rs  keys.rs  lib.rs  newparser.rs  parser.rs
src/desktop_control/: keys.rs
src/parser/: number.rs  regular.rs  roundy.rs  spelling.rs
