[package]
name = "voice-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

coqui-stt = { version = "0.2.3", path = "../coqui-stt" }
cpal = "0.13.5"
webrtc-vad = { git="https://github.com/andreytkachenko/webrtc-vad" } # "0.4.0"
rdev = { git="https://github.com/TTWNO/rdev" } # "0.5.1"

hound = "3.4.0"

[dev-dependencies]

expect-test = "1.3.0"